...
        android:layout_below="@id/sort_layout"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="1dp">

        <ListView
            android:id="@+id/recipe_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
...
